--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'QL'
 - !lcsh 'Pinnipedia'
+- GITenberg
 title: 'Suomen maan Meripedot: maalikuvilla selitetyt'
 url: http://www.gutenberg.org/ebooks/15967
